# se-coast-strandings

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
chats/: chats.json  food_density_inquiry.md
notebooks/: 01_dataset_traits.ipynb  01_eda_jh.ipynb  02_data_clean.ipynb  03_weather_data.ipynb  04_jh_plankton_dataset.ipynb
src/se_coast_strandings/: __init__.py  cli.py  transformations.py
src/se_coast_strandings/contextual_data/: __init__.py  food_density.py  weather.py
