[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "se_coast_strandings"
version = "0.1.0"
dependencies = [
    "pandas>=3.0.0",
    "numpy>=2.4.1"
]
requires-python = ">=3.10"

[project.scripts]
se_coast_strandings = "se_coast_strandings.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]